<resources>
    <string name="app_name">GamesBoxd</string>

    <!-- TextView -->
    <string name="TV_Games">Games</string>
    <string name="TV_Boxd">Boxd</string>
    <string name="TV_senha">Senha</string>
    <string name="TV_EsqueciSenha">Recuperar Senha</string>
    <string name="TV_InsiraFoto">Insira uma foto para seu perfil</string>
    <string name="TV_InsiraNome">Insira seu nome</string>
    <string name="TV_InsiraEmail">Insira seu email</string>
    <string name="TV_SeuNome">Seu nome</string>
    <string name="TV_SeuEmail">Seu email</string>
    <string name="TV_AlterarEmail">Alterar Email</string>
    <string name="TV_SuaId">Seu nome de usuário</string>
    <string name="TV_Cadastrar">Cadastrar</string>
    <string name="TV_Senha">Insira sua senha</string>
    <string name="TV_SenhaAtual">Insira sua senha atual</string>
    <string name="TV_SenhaNova">Insira sua nova senha</string>
    <string name="TV_ConfirmarSenhaNova">Confirme sua nova senha</string>
    <string name="TV_AlterarSenha">Alterar Senha</string>
    <string name="TV_ConfirmarSenha">Confirme sua senha</string>
    <string name="TV_ConfigurarConta">Conta</string>

    <!-- EditText -->
    <string name="ET_Email">Email</string>
    <string name="ET_Nome">Nome</string>
    <string name="ET_User">User</string>
    <string name="ET_Password">Senha</string>
    <string name="ET_PasswordNew">Senha nova</string>
    <string name="ET_Password2">Confirme sua senha</string>
    <string name="ET_PasswordNew2">Confirme sua nova senha</string>
    <string name="ET_ForgetPassword">Esqueci a senha</string>
    <string name="ET_SigUp">Cadastrar</string>
    <string name="ET_OU">Ou</string>

    <!-- Button -->
    <string name="BT_Entrar">Entrar</string>
    <string name="BT_RecuperarSenha">Recuperar senha</string>
    <string name="BT_AlterarSenha">Alterar senha</string>
    <string name="BT_AlterarEmail">Alterar email</string>
    <string name="BT_Cadastrar">Cadastrar conta</string>
    <string name="BT_Editar">Editar conta</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Label -->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_account">Conta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>