<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context=".AlterarSenha">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/arbutus_slab"
        android:text="@string/TV_AlterarSenha"
        android:textColor="@color/Fonts"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/textView_InsiraSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TV_SenhaAtual"
        android:textColor="@color/Fonts"
        android:fontFamily="@font/arbutus_slab"
        android:textSize="24sp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="80dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_Senha_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded"
            android:fontFamily="@font/arbutus_slab"
            android:hint="@string/ET_Password"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView_InsiraSenhaNova"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TV_SenhaNova"
        android:textColor="@color/Fonts"
        android:fontFamily="@font/arbutus_slab"
        android:textSize="24sp"
        android:layout_marginBottom="10dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputSenhaNova"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded"
            android:fontFamily="@font/arbutus_slab"
            android:hint="@string/ET_PasswordNew"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView_ConfirmeSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/arbutus_slab"
        android:text="@string/TV_ConfirmarSenhaNova"
        android:textColor="@color/Fonts"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputSenhaConf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded"
            android:fontFamily="@font/arbutus_slab"
            android:hint="@string/ET_PasswordNew2"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_AlterarSenha"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/ColorSecundary"
        android:fontFamily="@font/arbutus_slab"
        android:text="@string/BT_AlterarSenha"
        android:textColor="@color/Fonts"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"/>

</LinearLayout>